# Compute-continuous-moments-de-ned-in-a-rectangular-region-using-CUDA-and-some-applications

./: CMakeLists.txt  README.md  README_cn.md  edge_extraction.cu  edge_extraction_768~800.yaml  lena-1024.tif  lena_5_recons.tiff  lenna-1024_3_recons.tif  reconstruction.cu  rectangular.cu  rectangular_768~800.yaml  rectangular_double.cu  run.sh
test_images/: Fig0304(a)(breast_digital_Xray)_11_512_recons.tif  Fig0304(a)(breast_digital_Xray)_7_512_recons.tif  Fig0622(a)(tropical_rain_grayscale_11_2880_recons.tif  FigP0724(left)_7_800_recons.tif  lenna-1024_11_1024_recons.tif  lenna-1024_11_800_recons.tif  lenna-1024_7_1024_recons.tif  lenna-1024_7_800_recons.tif  n013-2018-09-04-13-30-50+0800__CAM_FRONT_LEFT__1536039167604825_11_1600_recons.tif  n013-2018-09-04-13-30-50+0800__CAM_FRONT_LEFT__1536039167604825_11_1920_recons.tif  n013-2018-09-04-13-30-50+0800__CAM_FRONT_LEFT__1536039167604825_11_800_recons.tif
